Prepare dev.10 cumulative combat fixes and prerelease validation